update footer and some colors

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -60,7 +60,7 @@
                 </div>
     
                 <!-- Experiences -->
-                <div class="sideTitle">
+                <div class="side-title">
                     <!-- Individual experience -->
                     <div class="description">
                         <p> <b>Sep 2023-now</b> Intern - International Road Federation<br>
@@ -83,14 +83,15 @@
                 </div>
 
                 <!-- Experiences -->
-                <div class="sideTitle">
+                <div class="side-title">
                     <!-- Individual experience -->
                     <div class="description">
                         <p> 
                             <b>Programming</b> <br>
-                            Java, C++, Python, HTML, CSS, Javascript, Go, R <br>
+                            Java, C++, Python, HTML, CSS, Javascript, Go, R
+                            <p></p>
                             <b>Creative</b> <br>
-                            Adobe Illustrator, Figma, Adobe Acrobat, Adobe XD, Premier Pro <br>
+                            Adobe Illustrator, Figma, Adobe Acrobat, Adobe XD, Premier Pro <p></p>
                             <b>Microsoft Suite</b> <br>
                             Excel, Word, PowerPoint, Outlook, Teams
                         </p>
@@ -106,7 +107,7 @@
                 </div>
 
                 <!-- Experiences -->
-                <div class="sideTitle">
+                <div class="side-title">
                     <!-- Individual experience -->
                     <div class="description">
                         <p> 
