--- a/src/pages/journey.html
+++ b/src/pages/journey.html
@@ -42,7 +42,8 @@
             </div>
             <div class="content">
                 <h2>UX/UI Research Design:</h2>
-                <p>WHOBao</p>
+                <p>Figma <br>
+                    WHOBao</p>
             </div>
         </section>
         <!-- Add more sections as needed -->
