--- a/src/pages/movement.html
+++ b/src/pages/movement.html
@@ -18,7 +18,7 @@
             <h2 class="custom-header">movement</h2>
             <p class="header-description">follow the flow.</p>
         </div>
-    </header>
+        </header>
 
     <div class="video-container">
         <!-- Left video and text -->
@@ -40,7 +40,9 @@
             <p>Entering college, I got the opportunity my passion in dnace through the lens of hiphop and k-pop. I also quite enjoy freestyling and just letting the body move.</p>
             </div>
         </div>
+    </div>
 </body>
+
 </html>
 
 <footer>
