--- a/src/pages/documentation.html
+++ b/src/pages/documentation.html
@@ -121,6 +121,11 @@
                 </div>
             </div>
         </div>
+    </div>
     </main>
 </body>
 </html>
+<footer>
+    <p>Contact: allisonlu100@gmail.com</p>
+    <p>Follow me on <a href="https://instagram.com/wholu.moo" target="_blank">instagram</a></p>
+</footer>
