--- a/src/pages/illustration.html
+++ b/src/pages/illustration.html
@@ -41,9 +41,9 @@
         <section id="illustration" class="section">
             <h2>Artwork:</h2>
         </section>
-        <div class="slider-container">
+        <div class="slider-container" id="slider1">
             <div class="slider">
-                <button class="prev" onclick="prevSlide(2)">❮</button>
+                <button class="prev" onclick="prevSlide(1)">❮</button>
                 <div class="slide" id="slide3a">
                     <img src="../img/artwork/eye.jpg" alt="Eye Forest">
                 </div>
