add favicon for the webistes

--- a/src/pages/illustration.html
+++ b/src/pages/illustration.html
@@ -22,6 +22,7 @@
         }
     </style>
     <!-- Include common structure from index.html -->
+    <link rel="icon" href="../img/favicon-headphones.png" type="image/x-icon">
     <link rel="stylesheet" href="../components/style.css">
     <script defer src="../components/script.js"></script>
 </head>
