--- a/src/pages/journey.html
+++ b/src/pages/journey.html
@@ -20,12 +20,13 @@
         </div>
     </header>
     <main>
-        <section id="about-me" class="section">
-            <h2>about me: </h2>
-            <p>finding my journey within the cs world</p>
+        <section id="about-me" class="section clickable-section">
+                <h2>About Me:</h2>
+                <p>finding my journey within the cs world</p>
+            </a>
         </section>
 
-        <section id="coding-projects" class="section">
+        <section id="coding-projects" class="section clickable-section">
             <div class ="content">
                 <h2>Coding Projects:</h2>
                 <p>Java, HTML, CSS, Javascript<br>
@@ -36,18 +37,19 @@
             </div>
         </section>
 
-        <section id="UX-UI" class="section">
+        <section id="design" class="section clickable-section">
             <div class="image-container">
                 <img class="icons" src = "../img/smartphone.png" alt="Smartphone">
             </div>
             <div class="content">
-                <h2>UX/UI Research Design:</h2>
-                <p>Figma <br>
-                    WHOBao</p>
+                <h2>Design Projects:</h2>
+                <p>Figma, UX/UI, Adobe Illustrator <br>
+                    WHOBao, TeamCSA</p>
             </div>
         </section>
         <!-- Add more sections as needed -->
     </main>
+    <script defer src="../components/script.js"></script>
 </body>
 </html>
 
