--- a/src/pages/coding-projects.html
+++ b/src/pages/coding-projects.html
@@ -20,6 +20,7 @@
         </section>
     </main>
     <!-- journey.html -->
+<div class="side-by-side-container">
     <section id="website" class="section clickable-section">
         <div class="project-unit">
             <div class="image-container">
@@ -43,6 +44,8 @@
             </div>
         </div>
     </section>
+</div>
+
 </body>
 
 </html>
