new logo + whobao content start

--- a/src/pages/coding-projects.html
+++ b/src/pages/coding-projects.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Allison Lu</title>
     <!-- Include common structure from index.html -->
-    <link rel="icon" href="../img/favicon-headphones.png" type="image/x-icon">
+    <link rel="icon" href="../img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../components/style.css">
     <script defer src="../components/script.js"></script>
 </head>
@@ -16,10 +16,9 @@
     <main>
         <section id="Coding-Project" class="section">
             <h2>Coding Projects</h2>
-            <p>Two main coding projects that I've been working on.</p>
+            <!--<p>Two main coding projects that I've been working on.</p>-->
         </section>
     </main>
-    <!-- journey.html -->
 <div class="side-by-side-container">
     <section id="website" class="section clickable-section">
         <div class="project-unit">
