--- a/src/pages/documentation.html
+++ b/src/pages/documentation.html
@@ -21,7 +21,7 @@
             transform: rotate(90deg);
         }
     </style>
-    <link rel="icon" href="../img/favicon-headphones.png" type="image/x-icon">
+    <link rel="icon" href="../img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../components/style.css">
     <script defer src="../components/script.js"></script>
 </head>
