--- a/src/pages/movement.html
+++ b/src/pages/movement.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Allison Lu</title>
     <!-- Include common structure from index.html -->
-    <link rel="icon" href="../img/favicon-headphones.png" type="image/x-icon">
+    <link rel="icon" href="../img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../components/style.css">
     <script defer src="../components/script.js"></script>
 </head>
