--- a/src/pages/WHOBao.html
+++ b/src/pages/WHOBao.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Allison Lu</title>
-    <link rel="icon" href="../img/favicon-headphones.png" type="image/x-icon">
+    <link rel="icon" href="../img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../components/style.css">
     <script defer src="../components/script.js"></script>
 </head>
@@ -12,63 +12,65 @@
     <!-- Your content goes here -->
     <!-- Include the navigation bar using JavaScript -->
     <div id="navbar-container"></div>
-    <header class="header-documentation">
-        <div class="header-content">
-            <h1 class="custom-header">WHOBao</h1>
-            <p class="header-description">sharing happy seeds.</p>
-        </div>
-    </header>
     <main>
         <section id="whobao intro" class="section">
             <div class ="content">
                 <h1>WHOBao</h1>
-                <p></p>
-                <p>Java, HTML, CSS, Javascript<br>
-                Currency Exchange, this website</p>
+                <p>Reserve your new study space.</p>
+                <h2>UX Case Study</h2>
             </div>
             <div class = "image-container">
                 <img class="icons" src="../img/coding projects icon.png" alt="Programming Icon">
+                <img src = > <!--image of WHOBao website-->
             </div>
+        </section>
+        <section id="product overview" class="section">
+            <h2>Product Overview</h2>
+            <p>jfkldsjf</p>
+            <div class = "sub-content">
+                <h1>Responsibility</h1>
+                <p>UX Designer</p>
+                </section>
+                <h2>Tools</h2>
+                <section className="line-3">
+                <p>Figma</p>
+                <p>Miro</p>
+                </section>
+                </div>
+            </div>
+        </section>
+        <section id = "intro">
+            <h2>Problem Statement</h2>
+            <p> jfklsjdfj </p>
+            <h2>Goal</h2>
+            <p> jfklsdjf </p>
         </section>
 
-        <section id="UX-UI" class="section">
-            <div class="image-container">
-                <img class="icons" src = "../img/smartphone.png" alt="Smartphone">
+        <section id = "body" class = "section">
+            <h2>Target Audience</h2>
+            <p> jfksdf </p>
+            <h2> Competitive Analysis</h2>
+            <p> jfskld </p>
+            <div class = "image">
+                <!--insert the excel sheet -->
             </div>
-            <div class="content">
-                <h2>UX/UI Research Design:</h2>
-                <p>Figma <br>
-                    WHOBao</p>
+            <h2>Empathy Map and Persona</h2>
+            <div class = "empathy map"> </div>
+            <p> jflks </p>
+            <h2> User Flow </h2>
+            <div class = "user-flow">
+                <!--<img src={persona} className="persona-pic-travel" alt="persona-pic"/>-->
             </div>
+            <h2> Low Fi Prototype </h2>
+            <div class = "low-fi">
+                <!--<img src={persona} className="persona-pic-travel" alt="persona-pic"/>-->
+            </div>
+            <h2> High Fi Prototype</h2>
+            <div class = "high-fi">
+                <!--<img src={persona} className="persona-pic-travel" alt="persona-pic"/>-->
+            </div>
+            <h2> Conclusion and Further Steps</h2>
         </section>
-        <!-- Gallery using a div container -->
-        <div class="slider-container" id="slider2">
-            <div class="slider">
-                <button class="prev" onclick="prevSlide(2)">❮</button>
-                <div class="slide" id="slide2a">
-                    <img src="../img/view/beach.jpg" alt="Tahoe beach">
-                </div>
-                <div class="slide" id="slide2b">
-                    <img src="../img/view/island.jpg" alt="Tahoe island">
-                </div>
-                <div class="slide" id="slide2c">
-                    <img src="../img/view/montreux.JPG" alt="Montreux">
-                </div>
-                <!-- Add more slides as needed -->
-                <button class="next" onclick="nextSlide(1)">❯</button>
-                
-            </div>
-            <div class="slider-nav">
-                <div class="thumbnail-container">
-                    <div class="thumbnails" id="thumbnails2">
-                        <img src="../img/view/beach.jpg" alt = "Tahoe beach" onclick="currentSlide(1 ,2)" class="thumbnail">
-                        <img src="../img/view/island.jpg" alt="Tahoe island" onclick="currentSlide(2, 2)" class="thumbnail">
-                        <img src="../img/view/montreux.JPG" alt="Montreux" onclick="currentSlide(3, 2)" class="thumbnail">
-                        <!-- Add more thumbnails as needed -->
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
     </main>
 </body>
