--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -17,7 +17,7 @@
             height: auto;
         }
     </style>
-    <link rel="icon" href="../img/favicon-headphones.png" type="image/x-icon">
+    <link rel="icon" href="../img/logo.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="../components/style.css">
     <script src="../components/script.js" defer></script>
     </head>
