--- a/src/pages/adventure.html
+++ b/src/pages/adventure.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Allison Lu</title>
-    <link rel="icon" href="../img/favicon-headphones.png" type="image/x-icon">
+    <link rel="icon" href="../img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../components/style.css">
     <script defer src="../components/script.js"></script>
 </head>
