new page, edit layout

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -4,114 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Allison Lu</title>
-    <link rel="stylesheet" href="../components/styles.css">
-    <!-- Include common structure from index.html -->
+    <link rel="icon" href="../img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../components/style.css">
     <script defer src="../components/script.js"></script>
 </head>
-
 <body>
     <!-- Your content goes here -->
     <!-- Include the navigation bar using JavaScript -->
     <div id="navbar-container"></div>
+    <!-- Include page title-->
+    <header class="header-journey">
+        <div class="header-content">
+            <h2 class="custom-header">Allison's Journey</h2>
+            <p class="header-description">as Web Developer &amp; Creative Thinker</p>
+        </div>
+    </header>
+    <main>
+        <!--
+        <section id="about-me" class="section clickable-section">
+                <h2>About Me:</h2>
+                <p>finding my journey within the cs world</p>
+            </a>
+        </section>-->
+
+        <section id="coding-projects" class="section clickable-section">
+            <div class ="content">
+                <h2>Coding Projects:</h2>
+                <p>Java, HTML, CSS, Javascript<br>
+                Currency Exchange, this website</p>
+            </div>
+            <div class = "image-container">
+                <img class="icons" src="../img/coding projects icon.png" alt="Programming Icon">
+            </div>
+        </section>
+
+        <section id="design" class="section clickable-section">
+            <div class="image-container">
+                <img class="icons" src = "../img/smartphone.png" alt="Smartphone">
+            </div>
+            <div class="content">
+                <h2>Design Projects:</h2>
+                <p>Figma, UX/UI, Adobe Illustrator <br>
+                    WHOBao, TeamCSA</p>
+            </div>
+        </section>
+        <!-- Add more sections as needed -->
+
+        <section id="adventure" class="section clickable-section">
+            <div class="image-container">
+                <img class="icons" src = "../img/smartphone.png" alt="Smartphone">
+            </div>
+            <div class="content">
+                <h2>Adventure</h2>
+                <p>Dis <br>
+                    WHOBao, TeamCSA</p>
+            </div>
+        </section>
+    </main>
+    <script defer src="../components/script.js"></script>
 </body>
 </html>
-
-<header>
-    <h1>Allison Here,</h1>
-    <p>Web Developer &amp; Creative Thinker</p>
-</header>
-
-
-<nav>
-    <ul>
-        <li><a href="journey.html">Journey</a></li>
-        <li><a href="adventure.html">Adventure</a></li>
-        <li><a href="about.html">About</a></li>
-    </ul>
-</nav>
-
-
-<section id="about-me">
-    <h2>About Me</h2>
-    <p>
-        I'm a current senior at BU, majroing in Statistics and Computer Science and minoring in Public Health.
-    </p>
-    <!-- Add more content about yourself -->
-</section>
-
 
 <footer>
     <p>Contact: allisonlu100@gmail.com</p>
     <p>Follow me on <a href="https://instagram.com/wholu.moo" target="_blank">instagram</a></p>
 </footer>
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Home Page</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 20px;
-        }
-    </style>
-</head>
-<body>
-
-    <header>
-        <h1 id="pageTitle">Welcome to My Website</h1>
-    </header>
-
-    <nav>
-        <ul id="menu">
-            <li><a href="#" onclick="showHome()">Home</a></li>
-            <li><a href="#" onclick="showProjects()">Projects</a></li>
-            <li><a href="#" onclick="showAbout()">About</a></li>
-        </ul>
-    </nav>
-
-    <main id="content">
-        <section id="homeSection">
-            <h2>Home Section</h2>
-            <p>This is the home section content.</p>
-        </section>
-
-        <section id="projectsSection" style="display:none;">
-            <h2>Projects Section</h2>
-            <p>This is the projects section content.</p>
-        </section>
-
-        <section id="aboutSection" style="display:none;">
-            <h2>About Section</h2>
-            <p>This is the about section content.</p>
-        </section>
-    </main>
-
-    <script>
-        function showHome() {
-            document.getElementById('pageTitle').innerText = 'Welcome to My Website';
-            document.getElementById('homeSection').style.display = 'block';
-            document.getElementById('projectsSection').style.display = 'none';
-            document.getElementById('aboutSection').style.display = 'none';
-        }
-
-        function showProjects() {
-            document.getElementById('pageTitle').innerText = 'My Projects';
-            document.getElementById('homeSection').style.display = 'none';
-            document.getElementById('projectsSection').style.display = 'block';
-            document.getElementById('aboutSection').style.display = 'none';
-        }
-
-        function showAbout() {
-            document.getElementById('pageTitle').innerText = 'About Me';
-            document.getElementById('homeSection').style.display = 'none';
-            document.getElementById('projectsSection').style.display = 'none';
-            document.getElementById('aboutSection').style.display = 'block';
-        }
-    </script>
-
-</body>
-</html>
