--- a/src/pages/journey.html
+++ b/src/pages/journey.html
@@ -15,16 +15,17 @@
     <!-- Include page title-->
     <header class="header-journey">
         <div class="header-content">
-            <h2 class="custom-header">Allison's Journey</h2>
+            <h2 class="custom-header">journey</h2>
             <p class="header-description">as Web Developer &amp; Creative Thinker</p>
         </div>
     </header>
     <main>
+        <!--
         <section id="about-me" class="section clickable-section">
                 <h2>About Me:</h2>
                 <p>finding my journey within the cs world</p>
             </a>
-        </section>
+        </section>-->
 
         <section id="coding-projects" class="section clickable-section">
             <div class ="content">
