--- a/src/pages/WHOBao.html
+++ b/src/pages/WHOBao.html
@@ -41,16 +41,19 @@
         </section>
         <section id = "intro">
             <h2>Problem Statement</h2>
-            <p> jfklsjdfj </p>
+            <p> Felix is a student who concentrates with coffee and needs table space whenever he
+                visits his favorite bakery because he focuses better in an outdoor environment and 
+                has a hard time finding seats.</p>
             <h2>Goal</h2>
-            <p> jfklsdjf </p>
+            <p> Allow students and remote workers to request or reserve guarantee seating for a duration
+                in order to efficiently do their work, thus enhancing the user experience in a busy bakery. </p>
         </section>
 
         <section id = "body" class = "section">
             <h2>Target Audience</h2>
-            <p> jfksdf </p>
+            <p> 19-40 year olds <br> college students and remote workers </p>
             <h2> Competitive Analysis</h2>
-            <p> jfskld </p>
+            <p> - 85°  </p>
             <div class = "image">
                 <!--insert the excel sheet -->
             </div>
