tweak with colors and home

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -14,51 +14,28 @@
     <div id="navbar-container"></div>
     <!-- Include page title-->
     <header class="header-journey">
-        <div class="header-content">
-            <h2 class="custom-header">Allison's Journey</h2>
-            <p class="header-description">as Web Developer &amp; Creative Thinker</p>
+        <div class="container">
+            <div class="header-content">
+                <h2 class="custom-header">Introducing Allison</h2>
+                <p class="header-description">as Web Developer &amp; Creative Thinker</p>
+            </div>
+            <div class="image-container">
+                <img src="../img/SVG/intro sketch.svg" alt="profile pic" class="rounded-image">
+            </div>
         </div>
     </header>
     <main>
-        <!--
-        <section id="about-me" class="section clickable-section">
-                <h2>About Me:</h2>
-                <p>finding my journey within the cs world</p>
-            </a>
-        </section>-->
-
-        <section id="coding-projects" class="section clickable-section">
-            <div class ="content">
-                <h2>Coding Projects:</h2>
-                <p>Java, HTML, CSS, Javascript<br>
-                Currency Exchange, this website</p>
-            </div>
-            <div class = "image-container">
-                <img class="icons" src="../img/coding projects icon.png" alt="Programming Icon">
-            </div>
+        <section id="journey" class="section clickable-section">
+            <h2>journey:</h2>
+            <p>in software engineering and design</p>
         </section>
-
-        <section id="design" class="section clickable-section">
-            <div class="image-container">
-                <img class="icons" src = "../img/smartphone.png" alt="Smartphone">
-            </div>
-            <div class="content">
-                <h2>Design Projects:</h2>
-                <p>Figma, UX/UI, Adobe Illustrator <br>
-                    WHOBao, TeamCSA</p>
-            </div>
-        </section>
-        <!-- Add more sections as needed -->
-
         <section id="adventure" class="section clickable-section">
-            <div class="image-container">
-                <img class="icons" src = "../img/smartphone.png" alt="Smartphone">
-            </div>
-            <div class="content">
-                <h2>Adventure</h2>
-                <p>Dis <br>
-                    WHOBao, TeamCSA</p>
-            </div>
+            <h2>adventure:</h2>
+            <p>in life</p>
+        </section>
+        <section id="about-me" class="section clickable-section">
+            <h2>about:</h2>
+            <p>the real me</p>
         </section>
     </main>
     <script defer src="../components/script.js"></script>
