--- a/src/pages/adventure.html
+++ b/src/pages/adventure.html
@@ -13,12 +13,20 @@
     <!-- Include the navigation bar using JavaScript -->
     <div id="navbar-container"></div>
     <!-- Include page title-->
+    <!--
     <header class="video-header">
         <video autoplay muted loop id="headerVideo">
             <source src="../vid/skydive.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <div class="overlay"></div>
+        <div class="header-content">
+            <h2 class="custom-header">adventure</h2>
+            <p class="header-description">It's never too late to explore, <br>
+                there's more than what meets the eye.</p>
+        </div>
+    </header>-->
+    <header class="header-adventure">
         <div class="header-content">
             <h2 class="custom-header">adventure</h2>
             <p class="header-description">It's never too late to explore, <br>
