--- a/src/pages/WHOBao.html
+++ b/src/pages/WHOBao.html
@@ -24,10 +24,11 @@
                 <img src = > <!--image of WHOBao website-->
             </div>
         </section>
+        <hr class="section-divider">
         <section id="product overview" class="section">
             <h2>Product Overview</h2>
             <p>jfkldsjf</p>
-            <div class = "sub-content">
+            <div class = "case-study-sectiona">
                 <h1>Responsibility</h1>
                 <p>UX Designer</p>
                 </section>
@@ -39,7 +40,7 @@
                 </div>
             </div>
         </section>
-        <section id = "intro">
+        <section id = "intro" class = "case-study-section">
             <h2>Problem Statement</h2>
             <p> Felix is a student who concentrates with coffee and needs table space whenever he
                 visits his favorite bakery because he focuses better in an outdoor environment and 
@@ -49,7 +50,7 @@
                 in order to efficiently do their work, thus enhancing the user experience in a busy bakery. </p>
         </section>
 
-        <section id = "body" class = "section">
+        <section id = "body" class = "case-study-section">
             <h2>Target Audience</h2>
             <p> 19-40 year olds <br> college students and remote workers </p>
             <h2> Competitive Analysis</h2>
