add whobao portfolio

--- a/src/pages/WHOBao.html
+++ b/src/pages/WHOBao.html
@@ -25,45 +25,60 @@
             </div>
         </section>
         <hr class="section-divider">
-        <section id="product overview" class="section">
+        <section id="product overview" class="case-study-section">
             <h2>Product Overview</h2>
-            <p>jfkldsjf</p>
-            <div class = "case-study-sectiona">
+            <p>After going to visit your favorite bakery, you realize that it's super crowded - long line to order
+                and no seats avaiable to sit. This website not only allows users order online and pick up at the location, 
+                but also let users reserve a table for a certain time to ensure they have guaranteed seating for whatever reason
+                (i.e. studying, working, socializing)
+            </p>
+            <div class = "case-study-section">
+                <section className = "left">
                 <h1>Responsibility</h1>
                 <p>UX Designer</p>
                 </section>
                 <h2>Tools</h2>
-                <section className="line-3">
+                <section className="right">
                 <p>Figma</p>
                 <p>Miro</p>
                 </section>
-                </div>
             </div>
         </section>
         <section id = "intro" class = "case-study-section">
             <h2>Problem Statement</h2>
-            <p> Felix is a student who concentrates with coffee and needs table space whenever he
+            <p> #1: Felix is a student who concentrates with coffee and needs table space whenever he
                 visits his favorite bakery because he focuses better in an outdoor environment and 
-                has a hard time finding seats.</p>
+                has a hard time finding seats. <br>
+                #2: Crystal is 
+            </p>
             <h2>Goal</h2>
             <p> Allow students and remote workers to request or reserve guarantee seating for a duration
-                in order to efficiently do their work, thus enhancing the user experience in a busy bakery. </p>
+                in order to efficiently do their work, thus enhancing the user experience in a busy bakery. <br>
+                Our WhoBao Bakery website will let users know current available drinks/baked goods and hold the 
+                items 15 minutes in advance which will affect those that wanted a particular item and can easily 
+                pick up their items to go/to find a seat by allowing users to skip the in-store ordering and same 
+                them time. We will measure effectiveness by tracking how many users take part in this feature, and 
+                see when they start placing the orders and when they pick up the item to see if the time allocated 
+                is appropriate. 
+            </p>
         </section>
-
         <section id = "body" class = "case-study-section">
+            <h1>Research</h1>
             <h2>Target Audience</h2>
             <p> 19-40 year olds <br> college students and remote workers </p>
+
             <h2> Competitive Analysis</h2>
             <p> - 85°  </p>
-            <div class = "image">
                 <!--insert the excel sheet -->
-            </div>
-            <h2>Empathy Map and Persona</h2>
-            <div class = "empathy map"> </div>
-            <p> jflks </p>
+                <div id="excel-container"></div>
+            <h2>Personas</h2>
+            <div class = "persona"> </div>
+            <img class="icons" src="../img/whobao/Felix User Persona.png" alt="Felix User Persona">
+            <br>
+            <img class="icons" src="../img/whobao/Crystal User Persona.png" alt="Crystal User Persona">
             <h2> User Flow </h2>
             <div class = "user-flow">
-                <!--<img src={persona} className="persona-pic-travel" alt="persona-pic"/>-->
+                <img class="icons" src="../img/whobao/order user flow.png" alt="Crystal User Persona">
             </div>
             <h2> Low Fi Prototype </h2>
             <div class = "low-fi">
