hide some pages

--- a/src/pages/journey.html
+++ b/src/pages/journey.html
@@ -27,17 +27,45 @@
             </a>
         </section>-->
 
-        <section id="coding-projects" class="section clickable-section">
+        <!--
+        <section id="coding-projects" class="section">
             <div class ="content">
                 <h2>Coding Projects:</h2>
                 <p>Java, HTML, CSS, Javascript<br>
                 Currency Exchange, this website</p>
             </div>
             <div class = "image-container">
-                <img class="icons" src="../img/coding projects icon.png" alt="Programming Icon">
+                <img class="icons" src="../img/icons/code-icon.png" alt="Programming Icon">
             </div>
         </section>
+-->
+        <div class="side-by-side-container">
+            <section id="website" class="section clickable-section">
+                <div class="project-unit">
+                    <div class="image-container">
+                        <img class="clickable-image" src="../img/icons/website.png" alt="Website Image">
+                    </div>
+                    <div class="content">
+                        <h2>This Website!</h2>
+                        <p>HTML, CSS, JavaScript</p>
+                    </div>
+                </div>
+            </section>
+        
+            <section id="currency-exchange" class="section clickable-section">
+                <div class="project-unit">
+                    <div class="image-container">
+                        <img class="clickable-image" src="../img/icons/currency-exchange.png" alt="Currency Converter Image">
+                    </div>
+                    <div class="content">
+                        <h2>Currency Converter</h2>
+                        <p>Java</p>
+                    </div>
+                </div>
+            </section>
+        </div>
 
+        <!--
         <section id="design" class="section clickable-section">
             <div class="image-container">
                 <img class="icons" src = "../img/smartphone.png" alt="Smartphone">
@@ -47,7 +75,7 @@
                 <p>Figma, UX/UI, Adobe Illustrator <br>
                     WHOBao, TeamCSA</p>
             </div>
-        </section>
+        </section>-->
         <!-- Add more sections as needed -->
     </main>
     <script defer src="../components/script.js"></script>
