--- a/src/pages/journey.html
+++ b/src/pages/journey.html
@@ -15,6 +15,7 @@
     <!-- Include page title-->
     <header class="header-journey">
         <div class="header-content">
+            <img src="../img/header/cds.jpg" alt="CDS building" class="header-image">
             <h2 class="custom-header">journey</h2>
             <p class="header-description">as Web Developer &amp; Creative Thinker</p>
         </div>
