edit images and have transparent header

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -42,7 +42,7 @@
                     </p>
                 </div>
                 <div class = "image-container">
-                    <img class = profile src="../img/profile/allison.JPG" alt="Allison">
+                    <img class = profile src="../img/header/allison.JPG" alt="Allison">
                 </div>
             </section>
         </main>
