finish adventure.html and update illustration/documentation pictures

--- a/src/pages/adventure.html
+++ b/src/pages/adventure.html
@@ -34,17 +34,17 @@
         </div>
     </header>
     <main>
-        <section id="movement" class="section">
+        <section id="movement" class="section clickable-section">
             <h2>movement: </h2>
             <p>explore the power of movement and flow</p>
         </section>
 
-        <section id="documentation" class="section">
+        <section id="documentation" class="section clickable-section">
             <h2>documentation:</h2>
             <p>explore the power of documenting loved ones</p>
         </section>
 
-        <section id="illustration" class="section">
+        <section id="illustration" class="section clickable-section">
             <h2>illustration:</h2>
             <p>explore the power of art and illustration</p>
         </section>
