--- a/src/pages/documentation.html
+++ b/src/pages/documentation.html
@@ -47,42 +47,42 @@
             <div class="slider">
                 <button class="prev" onclick="prevSlide(1)">❮</button>
                 <div class="slide" id="slide1a">
-                    <img src="../img/profile/ireland kat+ting1.JPG" alt="Kat and Ting">
+                    <img src="../img/documentation/profile/ireland kat+ting1.JPG" alt="Kat and Ting">
                 </div>
                 <div class="slide" id="slide1b">
-                    <img src="../img/profile/ireland kat+ting2.JPG" alt="Kat and Ting">
+                    <img src="../img/documentation/profile/ireland kat+ting2.JPG" alt="Kat and Ting">
                 </div>
                 <div class="slide" id="slide1c">
-                    <img src="../img/profile/rian.jpg" alt="Rian">
+                    <img src="../img/documentation/profile/rian.jpg" alt="Rian">
                 </div>
                 <div class="slide" id="slide1d">
-                    <img src="../img/profile/vicky.JPG" alt="Vicky">
+                    <img src="../img/documentation/profile/vicky.JPG" alt="Vicky">
                 </div>
                 <div class="slide" id="slide1e">
-                    <img src="../img/profile/grace.JPG" alt="Grace">
+                    <img src="../img/documentation/profile/grace.JPG" alt="Grace">
                 </div>
                 <div class="slide" id="slide1f">
-                    <img src="../img/profile/lanlan.jpg" alt="LanLan">
+                    <img src="../img/documentation/profile/lanlan.jpg" alt="LanLan">
                 </div>
                 <div class="slide" id="slide1g">
-                    <img src="../img/profile/steph ting julie.jpg" alt="Steph, Ting, Julie">
+                    <img src="../img/documentation/profile/steph ting julie.jpg" alt="Steph, Ting, Julie">
                 </div>
                 <div class="slide" id="slide1h">
-                    <img id="rotateSpecificImage" src="../img/profile/rosanna.jpg" alt="Rosanna">
+                    <img id="rotateSpecificImage" src="../img/documentation/profile/rosanna.jpg" alt="Rosanna">
                 </div>
                 <button class="next" onclick="nextSlide(1)">❯</button>
                 <!-- Add more slides as needed -->
             </div>
                 <div class="thumbnail-container">
                     <div class="thumbnails" id="thumbnails1">
-                        <img src="../img/profile/ireland kat+ting1.JPG" alt="Kat and Ting" onclick="currentSlide(1, 1)" class="thumbnail">
-                        <img src="../img/profile/ireland kat+ting2.JPG" alt="Kat and Ting" onclick="currentSlide(2, 1)" class="thumbnail">
-                        <img src="../img/profile/rian.jpg" alt="Rian" onclick="currentSlide(3, 1)" class="thumbnail">
-                        <img src="../img/profile/vicky.jpg" alt="Vicky" onclick="currentSlide(4, 1)" class="thumbnail">
-                        <img src="../img/profile/grace.jpg" alt="Grace" onclick="currentSlide(5, 1)" class="thumbnail">
-                        <img src="../img/profile/lanlan.jpg" alt="LanLan" onclick="currentSlide(6, 1)" class="thumbnail">
-                        <img src="../img/profile/steph ting julie.jpg" alt="Steph, Ting, Julie" onclick="currentSlide(7,1 )" class="thumbnail">
-                        <img id="rotateSpecificImage" src="../img/profile/rosanna.jpg" alt="Rosanna" onclick="currentSlide(8, 1)" class="thumbnail">
+                        <img src="../img/documentation/profile/ireland kat+ting1.JPG" alt="Kat and Ting" onclick="currentSlide(1, 1)" class="thumbnail">
+                        <img src="../img/documentation/profile/ireland kat+ting2.JPG" alt="Kat and Ting" onclick="currentSlide(2, 1)" class="thumbnail">
+                        <img src="../img/documentation/profile/rian.jpg" alt="Rian" onclick="currentSlide(3, 1)" class="thumbnail">
+                        <img src="../img/documentation/profile/vicky.jpg" alt="Vicky" onclick="currentSlide(4, 1)" class="thumbnail">
+                        <img src="../img/documentation/profile/grace.jpg" alt="Grace" onclick="currentSlide(5, 1)" class="thumbnail">
+                        <img src="../img/documentation/profile/lanlan.jpg" alt="LanLan" onclick="currentSlide(6, 1)" class="thumbnail">
+                        <img src="../img/documentation/profile/steph ting julie.jpg" alt="Steph, Ting, Julie" onclick="currentSlide(7,1 )" class="thumbnail">
+                        <img id="rotateSpecificImage" src="../img/documentation/profile/rosanna.jpg" alt="Rosanna" onclick="currentSlide(8, 1)" class="thumbnail">
                         <!-- Add more thumbnails as needed -->
                     </div>
             </div>
@@ -99,13 +99,13 @@
             <div class="slider">
                 <button class="prev" onclick="prevSlide(2)">❮</button>
                 <div class="slide" id="slide2a">
-                    <img src="../img/view/beach.jpg" alt="Tahoe beach">
+                    <img src="../img/documentation/view/beach.jpg" alt="Tahoe beach">
                 </div>
                 <div class="slide" id="slide2b">
-                    <img src="../img/view/island.jpg" alt="Tahoe island">
+                    <img src="../img/documentation/view/island.jpg" alt="Tahoe island">
                 </div>
                 <div class="slide" id="slide2c">
-                    <img src="../img/view/montreux.JPG" alt="Montreux">
+                    <img src="../img/documentation/view/montreux.JPG" alt="Montreux">
                 </div>
                 <!-- Add more slides as needed -->
                 <button class="next" onclick="nextSlide(1)">❯</button>
@@ -114,9 +114,9 @@
             <div class="slider-nav">
                 <div class="thumbnail-container">
                     <div class="thumbnails" id="thumbnails2">
-                        <img src="../img/view/beach.jpg" alt = "Tahoe beach" onclick="currentSlide(1 ,2)" class="thumbnail">
-                        <img src="../img/view/island.jpg" alt="Tahoe island" onclick="currentSlide(2, 2)" class="thumbnail">
-                        <img src="../img/view/montreux.JPG" alt="Montreux" onclick="currentSlide(3, 2)" class="thumbnail">
+                        <img src="../img/documentation/view/beach.jpg" alt = "Tahoe beach" onclick="currentSlide(1 ,2)" class="thumbnail">
+                        <img src="../img/documentation/view/island.jpg" alt="Tahoe island" onclick="currentSlide(2, 2)" class="thumbnail">
+                        <img src="../img/documentation/view/montreux.JPG" alt="Montreux" onclick="currentSlide(3, 2)" class="thumbnail">
                         <!-- Add more thumbnails as needed -->
                     </div>
                 </div>
