--- a/src/pages/illustration.html
+++ b/src/pages/illustration.html
@@ -46,19 +46,19 @@
             <div class="slider">
                 <button class="prev" onclick="prevSlide(1)">❮</button>
                 <div class="slide" id="slide3a">
-                    <img src="../img/artwork/eye.jpg" alt="Eye Forest">
+                    <img src="../img/documentation/artwork/eye.jpg" alt="Eye Forest">
                 </div>
                 <div class="slide" id="slide3b">
-                    <img src="../img/artwork/girl backpack.jpg" alt="Girl with backpack">
+                    <img src="../img/documentation/artwork/girl backpack.jpg" alt="Girl with backpack">
                 </div>
                 <div class="slide" id="slide3c">
-                    <img src="../img/artwork/lightbulb.jpg" alt="Fish and lightbulb">
+                    <img src="../img/documentation/artwork/lightbulb.jpg" alt="Fish and lightbulb">
                 </div>
                 <div class="slide" id="slide3d">
-                    <img src="../img/artwork/cherry blossom.jpeg" alt="Cherry Blossoms">
+                    <img src="../img/documentation/artwork/cherry blossom.jpeg" alt="Cherry Blossoms">
                 </div>
                 <div class="slide" id="slide3e">
-                    <img src="../img/artwork/mountain.jpeg" alt="Mountain">
+                    <img src="../img/documentation/artwork/mountain.jpeg" alt="Mountain">
                 </div>
                 <!-- Add more slides as needed -->
                 <button class="next" onclick="nextSlide(1)">❯</button>
@@ -67,11 +67,11 @@
             <div class="slider-nav">
                 <div class="thumbnail-container">
                     <div class="thumbnails" id="thumbnails2">
-                        <img src="../img/artwork/eye.jpg" alt="Eye Forest" onclick="currentSlide(1, 3)" class="thumbnail">
-                            <img src="../img/artwork/girl backpack.jpg" alt="Girl with backpack" onclick="currentSlide(2, 3)" class="thumbnail">
-                            <img src="../img/artwork/lightbulb.jpg" alt="Fish and lightbulb" onclick="currentSlide(3, 3)" class="thumbnail">
-                            <img src="../img/artwork/cherry blossom.jpeg" alt="Cherry Blossoms" onclick="currentSlide(4, 3)" class="thumbnail">
-                            <img src="../img/artwork/mountain.jpeg" alt="Mountain" onclick="currentSlide(5, 3)" class="thumbnail">
+                        <img src="../img/documentation/artwork/eye.jpg" alt="Eye Forest" onclick="currentSlide(1, 3)" class="thumbnail">
+                            <img src="../img/documentation/artwork/girl backpack.jpg" alt="Girl with backpack" onclick="currentSlide(2, 3)" class="thumbnail">
+                            <img src="../img/documentation/artwork/lightbulb.jpg" alt="Fish and lightbulb" onclick="currentSlide(3, 3)" class="thumbnail">
+                            <img src="../img/documentation/artwork/cherry blossom.jpeg" alt="Cherry Blossoms" onclick="currentSlide(4, 3)" class="thumbnail">
+                            <img src="../img/documentation/artwork/mountain.jpeg" alt="Mountain" onclick="currentSlide(5, 3)" class="thumbnail">
                             <!-- Add more thumbnails as needed -->
                     </div>
                 </div>
