finish about.html and journey.html

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -25,17 +25,11 @@
         <!-- Container for the navbar -->
         <div id="navbar-container"></div>
         <!-- Include header-->
-        <header class="header-about">
-            <div class="header-content">
-                <h2 class="custom-header">Hello Hello! Allison Here,</h2>
-                <p class="header-description">Allison: Going with the flow.</p>
-            </div>
-        </header>
-
         <main>
             <section id="about-me" class="section">
                 <div class ="content">
-                    <h2>About Me</h2>
+                    <h2 class="custom-header">Hello Hello! Allison Here,</h2>
+                    <h2>Allison: Going with the flow.</h2>
                     <p>I'm a student at Boston University, who is just finding their path in life. <br>
                         I am someone who takes on many side quests, and enjoy exploring new hobbies. <br>
                         I want to use my computer science knoweldge to make a positive impact while fostering a creative outlet.
@@ -64,13 +58,13 @@
                 <div class="side-title">
                     <!-- Individual experience -->
                     <div class="description">
-                        <p> <b>Sep 2023-now</b> Intern - International Road Federation<br>
-                            <b>Feb 2021-now</b>Desktop Support Assistant - Boston University Medical Campus, Information Technology Department <br>
-                            <b>Jun-Aug 2023</b>Human Resources Intern - Office of the Massachusetts State Treasurer and Receiver <br>
-                            <b>Feb-May 2023</b>Digital Strategy Intern - Boston University, Development and Alumni Relations <br>
-                            <b>May-Aug 2022</b>Coding Instructor - Code Academy <br>
-                            <b>Aug 2022 - Aug 2023</b>Resident Assistant - Boston University, Residence Life <br>
-                            <b>Sep2020-May2022</b>Co-graphic Designer - Boston Univeristy, Chinese Student Association
+                        <p> <b>Sep 2023-Dec 2023</b> Intern - International Road Federation<br>
+                            <b>Feb 2021-Dec 2023</b> Desktop Support Assistant - Boston University Medical Campus, Information Technology Department <br>
+                            <b>Jun-Aug 2023</b> Human Resources Intern - Office of the Massachusetts State Treasurer and Receiver <br>
+                            <b>Feb-May 2023</b> Digital Strategy Intern - Boston University, Development and Alumni Relations <br>
+                            <b>May-Aug 2022</b> Coding Instructor - Code Academy <br>
+                            <b>Aug 2022 - current</b> Resident Assistant - Boston University, Residence Life <br>
+                            <b>Sep2020-May2022</b> Co-graphic Designer - Boston Univeristy, Chinese Student Association
                         </p>
                     </div>
                 </div>
@@ -125,7 +119,6 @@
 </html>
 
 <footer>
-    <h3>Let's connect!</h3>
     <p>Contact: allisonlu100@gmail.com</p>
     <p>Follow me on <a href="https://instagram.com/wholu.moo" target="_blank">instagram</a></p>
 </footer>
