finish home.html and adjustments to about.html that reflects changes in home.html

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -4,19 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Allison Lu</title>
-    <!--Img size-->
-    <style>
-        /* Optional: Add some basic styling for the gallery */
-        .image-gallery {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-        }
-        .image-gallery img {
-            max-width: 30%;
-            height: auto;
-        }
-    </style>
     <link rel="icon" href="../img/logo.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="../components/style.css">
     <script src="../components/script.js" defer></script>
@@ -26,7 +13,7 @@
         <div id="navbar-container"></div>
         <!-- Include header-->
         <main>
-            <section id="about-me" class="section">
+            <section class="section">
                 <div class ="content">
                     <h2 class="custom-header">Hello Hello! Allison Here,</h2>
                     <h2>Allison: Going with the flow.</h2>
