--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -13,29 +13,27 @@
     <!-- Include the navigation bar using JavaScript -->
     <div id="navbar-container"></div>
     <!-- Include page title-->
-    <header class="header-journey">
-        <div class="container">
-            <div class="header-content">
-                <h2 class="custom-header">Introducing Allison</h2>
-                <p class="header-description">as Web Developer &amp; Creative Thinker</p>
-            </div>
-            <div class="image-container">
-                <img src="../img/SVG/intro sketch.svg" alt="profile pic" class="rounded-image">
-            </div>
+    <header class="header-home">
+        <div class ="content">
+            <h2 class="custom-header">Introducing Allison</h2>
+            <p class="header-description">as Web Developer &amp; Creative Thinker</p>
+        </div>
+        <div class = "image-container">
+            <img src="../img/SVG/intro sketch.svg" alt="profile pic" class="rounded-image"s>
         </div>
     </header>
     <main>
         <section id="journey" class="section clickable-section">
             <h2>journey:</h2>
-            <p>in software engineering and design</p>
+            <h4> in software engineering and design</h4>
         </section>
         <section id="adventure" class="section clickable-section">
             <h2>adventure:</h2>
-            <p>in life</p>
+            <h4> in life</h4>
         </section>
         <section id="about-me" class="section clickable-section">
             <h2>about:</h2>
-            <p>the real me</p>
+            <h4>the real me</h4>
         </section>
     </main>
     <script defer src="../components/script.js"></script>
